5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1799_2575.log
== TEST (2019-07-01 18:28:31) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite as opcoes: "))).upper.split(',')
cont = zeros(3, dtype = int)
for i in range(size(vet)):
	if(vet[i]== 'TV'):
		cont[0]=cont[0]+1
	elif(vet[i] == 'NETFLIX'):
		cont[1]==cont[1]+1
	elif(vet[i]=='YOUTUBE'):
		cont[2]== cont[2]+1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:29:00) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite as opcoes: "))).upper
cont = zeros(3, dtype = int)
for i in range(size(vet)):
	if(vet[i]== 'TV'):
		cont[0]=cont[0]+1
	elif(vet[i] == 'NETFLIX'):
		cont[1]==cont[1]+1
	elif(vet[i]=='YOUTUBE'):
		cont[2]== cont[2]+1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:29:21) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite as opcoes: "))).upper()
cont = zeros(3, dtype = int)
for i in range(size(vet)):
	if(vet[i]== 'TV'):
		cont[0]=cont[0]+1
	elif(vet[i] == 'NETFLIX'):
		cont[1]==cont[1]+1
	elif(vet[i]=='YOUTUBE'):
		cont[2]== cont[2]+1
print(cont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 18:29:49) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite as opcoes: "))).upper()
cont = zeros(3, dtype = int)
for i in range(size(vet)):
	if(vet[i]== 'TV'):
		cont[0]=cont[0]+1
	elif(vet[i] == 'NETFLIX'):
		cont[1]==cont[1]+1
	elif(vet[i]=='YOUTUBE'):
		cont[2]== cont[2]+1
print(cont)

-- EXECUTION TIME:
1.07692
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1799/2575/main.py", line 2, in <module>
    vet = array(eval(input())).upper()
AttributeError: 'numpy.ndarray' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:33:41) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite as opcoes: "))).upper()
v = zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]== 'TV'):
		t=t+1
	elif(vet[i] == 'NETFLIX'):
		n==n+1
	elif(vet[i]=='YOUTUBE'):
		y== y+1
v[0]=t
v[1]=n
v[3]=y
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:33:52) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite as opcoes: "))).upper().
v = zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]== 'TV'):
		t=t+1
	elif(vet[i] == 'NETFLIX'):
		n==n+1
	elif(vet[i]=='YOUTUBE'):
		y== y+1
v[0]=t
v[1]=n
v[3]=y
print(v)

-- ERROR:
File "XXXX", line 2
    vet = array(eval(input())).upper().
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:34:04) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite as opcoes: "))).upper().split(',')
v = zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]== 'TV'):
		t=t+1
	elif(vet[i] == 'NETFLIX'):
		n==n+1
	elif(vet[i]=='YOUTUBE'):
		y== y+1
v[0]=t
v[1]=n
v[3]=y
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:35:03) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes").upper()
v = zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]== 'TV'):
		t=t+1
	elif(vet[i] == 'NETFLIX'):
		n==n+1
	elif(vet[i]=='YOUTUBE'):
		y== y+1
v[0]=t
v[1]=n
v[3]=y
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:35:09) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v = zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]== 'TV'):
		t=t+1
	elif(vet[i] == 'NETFLIX'):
		n==n+1
	elif(vet[i]=='YOUTUBE'):
		y== y+1
v[0]=t
v[1]=n
v[3]=y
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:35:25) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v = zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]== 'TV'):
		t=t+1
	elif(vet[i] == 'NETFLIX'):
		n==n+1
	elif(vet[i]=='YOUTUBE'):
		y== y+1
v[0]=t
v[1]=n
v[2]=y
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 18:36:58) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v = zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]== 'TV'):
		t=t+1
	elif(vet[i] == 'NETFLIX'):
		n==n+1
	elif(vet[i]=='YOUTUBE'):
		y== y+1
v[0]=t
v[1]=n
v[2]=y
print(v)

-- EXECUTION TIME:
0.980722
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[0 0 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[0 0 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:38:24) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v = zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]== 'TV'):
		t==t+1
	elif(vet[i] == 'NETFLIX'):
		n==n+1
	elif(vet[i]=='YOUTUBE'):
		y==y+1
v[0]=t
v[1]=n
v[2]=y
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:38:44) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v = zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]== 'TV'):
		t==t+1
	elif(vet[i] == 'NETFLIX'):
		n==n+1
	elif(vet[i]=='YOUTUBE'):
		y==y+1
v[0]=t
v[1]=n
v[2]=y
print(v[0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:38:54) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v = zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]== 'TV'):
		t==t+1
	elif(vet[i] == 'NETFLIX'):
		n==n+1
	elif(vet[i]=='YOUTUBE'):
		y==y+1
v[0]=t
v[1]=n
v[2]=y
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:39:33) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v = zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]== 'TV'):
		t=t+1
	elif(vet[i] == 'NETFLIX'):
		n=n+1
	elif(vet[i]=='YOUTUBE'):
		y=y+1
v[0]=t
v[1]=n
v[2]=y
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:41:07) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v = zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]=="TV"):
		t=t+1
	elif(vet[i] =="NETFLIX"):
		n=n+1
	elif(vet[i]=="YOUTUBE"):
		y=y+1
v[0]=t
v[1]=n
v[2]=y
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:41:24) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v=zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]=="TV"):
		t=t+1
	elif(vet[i] =="NETFLIX"):
		n=n+1
	elif(vet[i]=="YOUTUBE"):
		y=y+1
v[0]=t
v[1]=n
v[2]=y
print(vet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:41:40) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v=zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]=="TV"):
		t=t+1
	elif(vet[i] =="NETFLIX"):
		n=n+1
	elif(vet[i]=="YOUTUBE"):
		y=y+1
v[0]=t
v[1]=n
v[2]=y
print(max(v)

-- ERROR:
File "XXXX", line 19
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:41:44) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v=zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]=="TV"):
		t=t+1
	elif(vet[i] =="NETFLIX"):
		n=n+1
	elif(vet[i]=="YOUTUBE"):
		y=y+1
v[0]=t
v[1]=n
v[2]=y
print(max(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:41:49) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v=zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]=="TV"):
		t=t+1
	elif(vet[i] =="NETFLIX"):
		n=n+1
	elif(vet[i]=="YOUTUBE"):
		y=y+1
v[0]=t
v[1]=n
v[2]=y
print(max(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 18:41:52) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v=zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]=="TV"):
		t=t+1
	elif(vet[i] =="NETFLIX"):
		n=n+1
	elif(vet[i]=="YOUTUBE"):
		y=y+1
v[0]=t
v[1]=n
v[2]=y
print(max(v))

-- EXECUTION TIME:
1.06116
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
0
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
0
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:42:50) 
-- CODE:
from numpy import*
vet = input("Digite as opcoes: ").upper()
v=zeros(3, dtype = int)
t=0
n=0
y=0

for i in range(size(vet)):
	if(vet[i]=="TV"):
		t=t+1
	elif(vet[i] =="NETFLIX"):
		n=n+1
	elif(vet[i]=="YOUTUBE"):
		y=y+1
v[0]=t
v[1]=n
v[2]=y
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
